Use Launcher class for JavaFX packaging